--- a/drone.html
+++ b/drone.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drona - Nos drones</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/drone.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/drone.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/logo.png">
+                    <img src="assets/img/logo.png">
 
                 </a>
                 <div class="d-flex">
@@ -66,7 +66,7 @@
                 <div class="card">
                     <h2>Modèle J</h2>
                     <p>700€ / j</p>
-                    <img src="../assets/img/drones/joe.png" alt="joe">
+                    <img src="assets/img/drones/joe.png" alt="joe">
                     <p>
                         Le modèle Joe peut convenir à des livraisons de petite taille. Conseillé pour le transport de
                         plusieurs commandes de nourriture ou de colis.
@@ -77,7 +77,7 @@
                 <div class="card">
                     <h2>Modèle W</h2>
                     <p>1400€ / j</p>
-                    <img src="../assets/img/drones/william.png" alt="william">
+                    <img src="assets/img/drones/william.png" alt="william">
                     <p>
                         Le modèle William peut convenir à des livraisons de taille moyenne. Conseillé pour le transport
                         de plusieurs commandes de colis de moyenne taille.
@@ -88,7 +88,7 @@
                 <div class="card">
                     <h2>Modèle A</h2>
                     <p>Sous devis</p>
-                    <img src="../assets/img/drones/averell.png" alt="averell">
+                    <img src="assets/img/drones/averell.png" alt="averell">
                     <p>
                         Le modèle Averell peut convenir à des livraisons de grande taille. Conseillé pour le transport
                         d’une très grande quantité d'objets.
