--- a/auteur.html
+++ b/auteur.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drona - A propos</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/auteur.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/auteur.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/logo.png">
+                    <img src="assets/img/logo.png">
 
                 </a>
                 <div class="d-flex">
@@ -85,72 +85,72 @@
             <h2>Préscila Messerschmidt</h2>
             <p>Animation 3D</p>
             <p>Cheffe</p>
-            <img src="../assets/img/avatars/prescila.png" alt="prescila">
+            <img src="assets/img/avatars/prescila.png" alt="prescila">
         </div>
         <div class="ourTeamCard">
             <h2>Morgan Jamain</h2>
             <p>Animation 3D</p>
-            <img src="../assets/img/avatars/morgan.png" alt="morgan">
+            <img src="assets/img/avatars/morgan.png" alt="morgan">
         </div>
         <div class="ourTeamCard">
             <h2>Elora Heilly</h2>
             <p>Animation 3D</p>
-            <img src="../assets/img/avatars/elora.png" alt="elora">
+            <img src="assets/img/avatars/elora.png" alt="elora">
         </div>
         <div class="ourTeamCard">
             <h2>Nans Boyer</h2>
             <p>AudioVisuel</p>
-            <img src="../assets/img/avatars/nans.png" alt="nans">
+            <img src="assets/img/avatars/nans.png" alt="nans">
         </div>
         <div class="ourTeamCard">
             <h2>Charles Fournales</h2>
             <p>AudioVisuel</p>
-            <img src="../assets/img/avatars/charles.png" alt="charles">
+            <img src="assets/img/avatars/charles.png" alt="charles">
         </div>
         <div class="ourTeamCard">
             <h2>Charline Portal</h2>
             <p>Création Design</p>
-            <img src="../assets/img/avatars/charline.png" alt="charline">
+            <img src="assets/img/avatars/charline.png" alt="charline">
         </div>
         <div class="ourTeamCard">
             <h2>Aimé Polelei</h2>
             <p>Création Design</p>
-            <img src="../assets/img/avatars/aimé.png" alt="aimé">
+            <img src="assets/img/avatars/aimé.png" alt="aimé">
         </div>
         <div class="ourTeamCard">
             <h2>Lina Rodes</h2>
             <p>Market' Com</p>
-            <img src="../assets/img/avatars/lina.png" alt="lina">
+            <img src="assets/img/avatars/lina.png" alt="lina">
         </div>
         <div class="ourTeamCard">
             <h2>Florian Lejosne</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/florian.png" alt="florian">
+            <img src="assets/img/avatars/florian.png" alt="florian">
         </div>
         <div class="ourTeamCard">
             <h2>Nicolas Guitay</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/nicolas.png" alt="nicolas">
+            <img src="assets/img/avatars/nicolas.png" alt="nicolas">
         </div>
         <div class="ourTeamCard">
             <h2>William Dubois</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/william.png" alt="william">
+            <img src="assets/img/avatars/william.png" alt="william">
         </div>
         <div class="ourTeamCard">
             <h2>Loup Bruneau</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/loup.png" alt="loup">
+            <img src="assets/img/avatars/loup.png" alt="loup">
         </div>
         <div class="ourTeamCard">
             <h2>Sylvain Lespagnol</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/sylvain.png" alt="sylvain">
+            <img src="assets/img/avatars/sylvain.png" alt="sylvain">
         </div>
         <div class="ourTeamCard">
             <h2>Alexandre Vernet</h2>
             <p>Informatique</p>
-            <img src="../assets/img/avatars/alexandre.png" alt="alexandre">
+            <img src="assets/img/avatars/alexandre.png" alt="alexandre">
         </div>
     </div>
 
