--- a/joe.html
+++ b/joe.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drona - Modèle J</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/joe.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/joe.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/logo.png">
+                    <img src="assets/img/logo.png">
 
                 </a>
                 <div class="d-flex">
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="content">
             <div class="image">
-                <video src="../assets/videos/Joe.mp4" controls poster="../assets/img/drones/joe.png"></video>
+                <video src="assets/videos/Joe.mp4" controls poster="assets/img/drones/joe.png"></video>
             </div>
             <div class="text">
                 <h2>Modèle Joe</h2>
